<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

<!--This item is used to hide the overflow menu (three dots) on the right   -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/spinner"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:prompt="@string/sort_cars"
        android:spinnerMode="dialog"
        android:title="@string/sort_cars"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always|withText"
        tools:actionLayout="al" />

    <!--Temporarily hide search icon until search is implemented   -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/abc_ic_search_api_material"
        android:title="@string/srch"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        tools:ignore="PrivateResource" />

</menu>

